# wishl-api

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  alembic.ini  pyproject.toml  pytest.ini
migrations/: env.py
src/: exceptions.py  logging.py  main.py  session.py  settings.py
src/health/data/repositories/database/: health_database_repository.py
src/health/domain/controllers/: health.py
src/health/domain/repositories/: health_repository.py
src/health/presentation/http/views/v1/: health.py
src/user/data/models/: user.py
src/wishlist/data/models/: wish_item.py  wishlist.py
